# drf-lessons-sept-2024

./: .env.example  .gitignore  docker-compose.yml  nginx.conf  pyproject.toml
apps/auth/: urls.py
apps/pizza/: crud.py  schemas.py  urls.py
apps/users/: urls.py  views.py
apps/users/migrations/: 0001_initial.py
backend/: .env.example  .env.local  Dockerfile  manage.py  pyproject.toml  pytest.ini  setup.py
backend/apps/auth/: urls.py  urls.py~  views.py
backend/apps/auth/tests/: test_auth_views.py
backend/apps/chat/: consumer.py  routing.py  urls.py  views.py
backend/apps/users/: filters.py  managers.py  models.py  permissions.py  serializers.py  urls.py  urls.py~  views.py
backend/apps/users/docs/: swagger_params.py
backend/apps/users/migrations/: 0001_initial.py  0002_alter_profilemodel_age_alter_usermodel_email.py  0002_profilemodel_avatar.py  0003_alter_profilemodel_avatar.py  0004_alter_profilemodel_age_alter_profilemodel_avatar_and_more.py  0005_alter_profilemodel_age.py
backend/apps/users/tests/: test_activate_views.py  test_avatar_views.py  test_details_views.py  test_list_create_views.py  test_reset_password_views.py
backend/apps/users/views/: activate_views.py  avatar_views.py  details_views.py  list_create_views.py  reset_password_views.py
backend/config/: asgi.py  routing.py  settings.py  urls.py
backend/config/docs/: docs.py  urls.py
backend/config/extra_config/: __init__.py  base_url.py  channels.py  db.py  db.py~  logger_config.py  rest_framework.py  simple_jwt.py  storages.py  swagger.py
backend/core/enums/: exceptions.py  jwt.py  jwt.py~  messages.py  msg.py  pika.py
backend/core/exceptions/: handler.py
backend/core/logging/: logger_config.py
backend/core/management/commands/: wait_db.py
backend/core/middlewares/: auth_socket.py  bearer.py
backend/core/mixins/: date_time.py
backend/core/models/: base.py
backend/core/pagination/: pagination.py
backend/core/schemas/: base.py  email.py
backend/core/serializers/: file_upload.py
backend/core/services/: jwt.py  pika_helper.py  send_email.py
backend/core/utils/: crypto.py  secret_key_generator.py
client/: index.html
config/: settings.py  urls.py
config/docs/: docs.py
core/enums/: pizza.py
core/mixins/: date_time.py  model_id_as_int.py
core/models/: base.py
core/schemas/: base.py
core/serializers/: base.py
core/utils/: converters.py
frontend/: .gitignore  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/src/: middleware.ts
frontend/src/app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/api/: helpers.ts
frontend/src/app/docs/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/recipes/: RecipesClient.tsx  index.module.css  page.tsx  useRecipes.ts
frontend/src/app/register/: index.module.css  page.tsx
frontend/src/app/users/: UsersClient.tsx  index.module.css  page.tsx  useUsers.ts
frontend/src/common/constants/: constants.ts  headers.ts
frontend/src/common/interfaces/: auth.interfaces.ts  dummy.interfaces.ts  forms.interfaces.ts  recipe.interfaces.ts  session.interfaces.ts  users.interfaces.ts
frontend/src/common/providers/: RootProvider.tsx
frontend/src/components/Skeleton/: Skeleton.tsx
frontend/src/components/ui/: loadingButton.tsx  spinner.tsx  (+3 more)
frontend/src/configs/: auth.ts
frontend/src/contexts/: AuthProviderContext.tsx
frontend/src/services/: apiAuth.ts  apiUsers.ts
mailing/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
mailing/src/: .env-template  .env.example  celery_config.py  email_consumer.py  main.py  send_email_request.py
mailing/src/core/enums/: templates.py
mailing/src/core/schemas/: email.py
mailing/src/services/: mail_services.py  pika_helper.py
mailing/src/services/encription_service/: decrypt_service.py  encrypt_service.py  key.txt  key_manager.py
mailing/src/settings/: config.py  logger_config.py
mailing/src/templates/: email_enum.py  email_template.html
mailing/src/utils/: __init__.py  converters.py
minio/data/.minio.sys/: format.json
pizza/: crud.py  schemas.py  urls.py
(+59 files in other folders)
