[tool.poetry]
package-mode = false
name = "fastapibase"
version = "0.1.0"
description = "BaseFastApiProject"
authors = ["pvs.versia@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = { extras = ["standard"], version = "^0.32.1" }
pydantic = { extras = ["email"], version = "^2.10.5" }
pydantic-settings = "^2.6.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.30.0"
pylance = "^0.20.0"
loguru = "^0.7.2"
alembic = "^1.14.0"
orjson = "^3.10.12"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
ruff = "^0.9.2"
sendgrid = "^6.11.0"
jinja2 = "^3.1.5"
celery = "^5.4.0"
pika = "^1.3.2"
mypy = "^1.15.0"

[tool.poetry.group.test.dependencies]
pytest-randomly = "^3.15.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.21.1"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = ''' /( \.git | \.venv | build | dist | pg_data )/ '''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["FastApiBase"]
known_third_party = [
    "fastapi",
    "requests",
    "uvicorn",
    "numpy",
    "pandas",
    "sqlalchemy",
    "pydantic",
    "starlette"
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
forced_separate = ["uvicorn"]
#import_heading_stdlib = "Standard libraries"
#import_heading_thirdparty = "Third-party libraries"
#import_heading_firstparty = "My libraries"

[tool.ruff.lint]
select = ["E", "F", "W", "C", "N", "B", "Q", "S", "I"]
ignore = ["E501", "S105"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


